--- a/Login/Login/LoginUI.xaml
+++ b/Login/Login/LoginUI.xaml
@@ -17,7 +17,10 @@
                 BorderColor="ForestGreen"
                 BorderWidth="1.5"
                 CornerRadius="50"
-                ></Button>
+                >
+                
+            </Button>
+            
             
             
         </StackLayout>
