--- a/Login/Login/LoginUI.xaml
+++ b/Login/Login/LoginUI.xaml
@@ -7,8 +7,9 @@
         <StackLayout Padding="40" VerticalOptions="Center" HorizontalOptions="FillAndExpand">
 
             <Image Source="logo_plasutil" WidthRequest="180" HeightRequest="180"></Image>
-            <Entry Placeholder= "Nome" TextColor="White" PlaceholderColor = "Gray"></Entry>
-            <Entry Placeholder= "Senha" IsPassword="True" PlaceholderColor = "Gray"></Entry>
+            
+            <Entry x:Name="txtNome"  Placeholder= "Nome" TextColor="White" PlaceholderColor = "Gray"></Entry>
+            <Entry x:Name="txtSenha" Placeholder= "Senha" IsPassword="True" PlaceholderColor = "Gray"></Entry>
             <Button
                 VerticalOptions="Center"
                 Text="Login"
@@ -17,12 +18,20 @@
                 BorderColor="ForestGreen"
                 BorderWidth="1.5"
                 CornerRadius="50"
-                >
-                
+                Clicked="btnLogin_Click"
+                >                
             </Button>
-            
-            
-            
+            <Label HorizontalOptions="Center">
+                <Label.FormattedText>
+                    <FormattedString>
+                        <Span Text="Você não tem conta? " TextColor="Gray"/>                        
+                        <Span Text="Registrar" TextColor="Gray" FontAttributes="Bold" TextDecorations="Underline"/>                        
+                    </FormattedString>
+                </Label.FormattedText>
+                <Label.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"/>                    
+                </Label.GestureRecognizers>
+            </Label>           
         </StackLayout>
     </ContentPage.Content>
 </ContentPage>
